force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/LLC_BI__Relationship_To_Owner__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship_To_Owner__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It includes a description of the beneficiary&apos;s relationship to the IRA/HSA owner.</description>
    <inlineHelpText>A description of the beneficiary&apos;s relationship to the IRA/HSA owner.</inlineHelpText>
    <label>Relationship to Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>