force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/WKDDP__Lineal_Per_Stripes_Indicator__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Lineal_Per_Stripes_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field when lineal per stripes distribution applies to the beneficiary. By default, it is false.</description>
    <inlineHelpText>Select this checkbox when lineal per stripes distribution applies to the beneficiary.</inlineHelpText>
    <label>Lineal Per Stripes Indicator</label>
    <type>Checkbox</type>
</CustomField>