force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/WKDDP__Type__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Type__c</fullName>
    <description>Users select whether the IRA plan beneficiary is an individual or an entity from this optional picklist.</description>
    <inlineHelpText>Select whether the IRA plan beneficiary is an individual or entity.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>